tests/NormalTests/paczka1/fuzzy1/81618723.err
Error in line 6: hEc3avO40 S590 -3,4
Error in line 13: 0CeliB0aZ A118 32,2
Error in line 26: IkvWApW S590 86,40
Error in line 5: A118 A118 45,7
Error in line 23: IkvWApW S688 52,5
Error in line 40: EMetJ7lQqF4 S688 í9,0
